# AetherSheets

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: Process.md  notes.md
src/: config.py  main.py
src/graphs/: company_research.py
src/helpers/: url_parser.py
src/integrations/: llm.py  scraper.py  sheet.py
src/prompts/company_research/: prompt.py
src/services/: company_summary.py
